# Delete13

./: CMakeLists.txt  Makefile.local  README.md  docker-compose.yml
configs/: static_config.yaml.in
src/: hello.cpp  hello.hpp  main.cpp  script.sh
src/courier-controller/: CourierHandler.cpp  CourierHandler.h
src/courier-number-controller/: CourierNumberHandler.cpp  CourierNumberHandler.h
src/couriers-info/: CourierInfoHandler.cpp  CourierInfoHandler.h
src/order-complete-controller/: OrderCompleteHandler.cpp  OrderCompleteHandler.h
src/order-controller/: OrdersHandler.cpp  OrdersHandler.h
src/order-controller/order-number-controller/: OrdersNumberHandler.h
src/order-number-controller/: OrdersNumberHandler.cpp
src/schemas/CompleteOrder/: CompleteOrder.cpp  CompleteOrder.h
src/schemas/CompleteOrderRequestDto/: CompleteOrderRequestDto.cpp  CompleteOrderRequestDto.h
src/schemas/CourierDto/: CourierDto.cpp  CourierDto.h
src/schemas/CouriersGroupOrders/: CouriersGroupOrders.cpp  CouriersGroupOrders.h
src/schemas/CreateCourierDto/: CreateCourierDto.cpp  CreateCourierDto.h
src/schemas/CreateCourierRequest/: CreateCourierRequest.cpp  CreateCourierRequest.h
src/schemas/CreateCouriersResponse/: CreateCouriersResponse.cpp  CreateCouriersResponse.h
src/schemas/CreateOrderDto/: CreateOrderDto.cpp  CreateOrderDto.h
src/schemas/CreateOrderRequest/: CreateOrderRequest.cpp  CreateOrderRequest.h
src/schemas/GetCourierMetaInfoResponse/: GetCourierMetaInfoResponse.cpp  GetCourierMetaInfoResponse.h
src/schemas/GetCouriersResponse/: GetCouriersResponse.cpp  GetCouriersResponse.h
src/schemas/GroupOrders/: GroupOrders.cpp  GroupOrders.h
src/schemas/OrderAssignResponse/: OrderAssignResponse.cpp  OrderAssignResponse.h
src/schemas/OrderDto/: OrderDto.cpp  OrderDto.h
